# r-spantree

./: CMakeLists.txt  Makefile  README.md  cleargendata.sh  genbest.sh  gendata.sh  genplots.sh  plot.r
src/: CMakeLists.txt  header.h  header.hpp  heuristic_1.cpp  heuristic_1.hpp  heuristic_2.cpp  heuristic_2.hpp  heuristic_dump.cpp  heuristic_dump.hpp  main.c  main.cpp  main.hpp
test/instance/: .~lock.EinstellungDerTestInstanzen.xls#  01.txt  02.txt  EinstellungDerTestInstanzen.xls  Instance1.txt  Instance2.txt  Instance3.txt  Instance8.txt
